--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url "http://clojars.org/repo" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
@@ -16,6 +17,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "http://clojars.org/repo" }
     }
 }
 
