--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,17 +7,24 @@ android {
         applicationId "com.ruitu.entrance_guard"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.1"
+        versionCode 4
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+    }
+    signingConfigs {
+        config {
+            keyAlias 'menjin001'
+            keyPassword 'menjin001123'
+            storeFile file('menjin001.jks')
+            storePassword 'menjin001123'
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            v1SigningEnabled true
-//            v2SigningEnabled true
+            signingConfig signingConfigs.config
         }
     }
     sourceSets {
